<resources>
    <string name="app_name">FinancePlusV3</string>
    <string name="main">Hlavní</string>
    <string name="ic_budget">Rozpočet</string>
    <string name="income">Příjem</string>
    <string name="expenses">Výdaje</string>
    <string name="add_income">Přidat příjem</string>
    <string name="add_expense">Přidat výdaj</string>
    <string name="description">Popis</string>
    <string name="category">Kategorie</string>
    <string name="amount">Částka</string>
    <string name="notification_channel_name">notifikace</string>
    <string name="notification_channel_description">notifikaceDescriptor</string>

    <string name="balance_format">Bilance: %.2f CZK</string>
    <string name="transaction_type">Typ transakce</string>
    <string name="date">Datum</string>
    <string name="add_transaction">Přidat transakci</string>
    <string name="total_incomes">Celkové příjmy za období</string>
    <string name="total_expenses">Celkové výdaje za období</string>
    <string name="income_count">Počet přijmů</string>
    <string name="expense_count">Počet výdajů</string>
    <string name="delete_transaction">Smazat transakci</string>
    <string name="delete_all_transaction">Smazat všechny transakce</string>

    <string name="delete_all_transactions_title">Smazat všechny transakce</string>
    <string name="delete_all_transactions_message">Opravdu chcete smazat všechny transakce?</string>
    <string name="yes">Ano</string>
    <string name="no">Ne</string>
</resources>